--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,13 @@
-/_build
-/cover
-/deps
-/doc
 /.fetch
-erl_crash.dump
+/_build/
+/assets/node_modules/
+/cover/
+/deps/
+/doc/
+/priv/static/assets/
+/priv/static/cache_manifest.json
+/tmp/
 *.ez
-*.beam
-/config/*.secret.exs
-.elixir_ls/
+erl_crash.dump
+npm-debug.log
+zex-*.tar
